fix alignment of map legend

--- a/app/components/Map/style.css
+++ b/app/components/Map/style.css
@@ -65,7 +65,8 @@ button.filter {
 }
 
 .countryView,
-.compareView {
+.compareView,
+.gaps-regionView {
   .leaflet-bottom {
     margin-bottom: 212px;
   }
